// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SaveButtonBar /> renders 1`] = `
<div
  className="Component-root-1"
>
  <div
    className="Component-spacer-2"
  />
  <button
    className="MuiButtonBase-root-19 MuiButton-root-4 Component-button-3"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-5"
    >
      Cancel
    </span>
    <span
      className="MuiTouchRipple-root-21"
    />
  </button>
  <button
    className="MuiButtonBase-root-19 MuiButton-root-4 MuiButton-raised-9 MuiButton-raisedPrimary-10"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-5"
    >
      Save
    </span>
    <span
      className="MuiTouchRipple-root-21"
    />
  </button>
</div>
`;

exports[`<SaveButtonBar /> renders when disabled 1`] = `
<div
  className="Component-root-1"
>
  <div
    className="Component-spacer-2"
  />
  <button
    className="MuiButtonBase-root-19 MuiButton-root-4 Component-button-3"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-5"
    >
      Cancel
    </span>
    <span
      className="MuiTouchRipple-root-21"
    />
  </button>
  <button
    className="MuiButtonBase-root-19 MuiButtonBase-disabled-20 MuiButton-root-4 MuiButton-raised-9 MuiButton-raisedPrimary-10 MuiButton-disabled-13"
    disabled={true}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="button"
  >
    <span
      className="MuiButton-label-5"
    >
      Save
    </span>
  </button>
</div>
`;
